--- a/Assets/UI/UI/FinishScreen.uxml
+++ b/Assets/UI/UI/FinishScreen.uxml
@@ -4,8 +4,9 @@
         <ui:GroupBox name="MedalBox" style="justify-content: flex-end; width: 26%; height: 25%; align-items: center;">
             <ui:VisualElement name="Medal" style="background-image: url(&apos;project://database/Assets/UI/2D%20Casual%20UI/Sprite/GUI.png?fileID=21300008&amp;guid=1eaee135ce037439d925cee5e41ce026&amp;type=3#GUI_4&apos;); width: 100%; height: 80%;" />
         </ui:GroupBox>
-        <ui:Label text="Score: " display-tooltip-when-elided="true" enable-rich-text="false" name="Score" class="score" style="width: auto; height: 10%; font-size: 30%; color: rgba(255, 255, 255, 255);" />
-        <ui:VisualElement name="ButtonBox" class="button-box">
+        <ui:Label display-tooltip-when-elided="true" enable-rich-text="false" name="Score" class="score" style="width: auto; height: 6%; font-size: 30%; color: rgb(255, 255, 255);" />
+        <ui:Label display-tooltip-when-elided="true" name="HighScore" class="score" style="height: 5%; font-size: 22%; -unity-text-align: lower-left; color: rgb(255, 254, 254);" />
+        <ui:VisualElement name="ButtonBox" class="button-box" style="align-items: center;">
             <ui:Button text="Next" display-tooltip-when-elided="true" name="NextButton" class="button" style="font-size: 14%; -unity-font-style: bold; -unity-slice-left: -9; -unity-slice-top: -9; -unity-slice-right: -9; -unity-slice-bottom: -9;" />
             <ui:Button text="Exit" display-tooltip-when-elided="true" name="ExitButton" enable-rich-text="false" class="button" style="justify-content: center; align-items: center; -unity-font-style: bold; font-size: 14%; width: 70%; height: 26%; border-top-left-radius: 3px; border-bottom-left-radius: 3px; border-top-right-radius: 3px; border-bottom-right-radius: 3px; -unity-slice-left: -9; -unity-slice-top: -9; -unity-slice-right: -9; -unity-slice-bottom: -9;" />
         </ui:VisualElement>
