--- a/Assets/UI/UI/HUD.uxml
+++ b/Assets/UI/UI/HUD.uxml
@@ -4,6 +4,7 @@
         <ui:GroupBox name="ButtonBox" style="width: 14%; height: 35%;">
             <ui:Button display-tooltip-when-elided="true" name="PauseButton" enable-rich-text="false" class="pause-button" style="background-image: url(&apos;project://database/Assets/UI/2D%20Casual%20UI/Sprite/GUI.png?fileID=21300068&amp;guid=1eaee135ce037439d925cee5e41ce026&amp;type=3#GUI_34&apos;); width: 100%; height: 25%;" />
         </ui:GroupBox>
-        <ui:Label display-tooltip-when-elided="true" name="ScoreLabel" enable-rich-text="true" class="score" style="width: 71%; height: 10%; -unity-text-align: lower-center; color: rgb(255, 255, 255); font-size: 24%; -unity-font-style: bold; text-shadow: 1px 0 0 rgb(255, 255, 255);" />
+        <ui:Label display-tooltip-when-elided="true" name="ScoreLabel" enable-rich-text="true" class="score" style="width: 30%; height: 10%; -unity-text-align: lower-center; color: rgb(255, 255, 255); font-size: 24%; -unity-font-style: bold; text-shadow: 1px 0 0 rgb(255, 255, 255);" />
+        <ui:Label display-tooltip-when-elided="true" name="Timer" enable-rich-text="true" class="score" style="height: 10%; width: 50%; font-size: 24%; -unity-text-align: lower-right;" />
     </ui:GroupBox>
 </ui:UXML>
